--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
     "expo-font": "^11.10.3",
+    "expo-font-loader": "^1.1.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
@@ -25,5 +26,13 @@
     "@babel/core": "^7.20.0",
     "babel-plugin-module-resolver": "^5.0.0"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "fonts": [
+      {
+        "family": "YourFontFamilyName",
+        "source": "./path/to/your/font.ttf"
+      }
+    ]
+  }
 }
