--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.14",
     "expo-font": "^11.10.3",
     "expo-font-loader": "^1.1.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-circle-slider": "^2.9.0",
+    "react-native-circular-slider": "^1.0.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-radial-slider": "^1.1.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
