--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native": "0.73.6",
     "react-native-circle-slider": "^2.9.0",
     "react-native-circular-slider": "^1.0.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-elements": "^3.4.3",
     "react-native-radial-slider": "^1.1.0",
     "react-native-safe-area-context": "4.8.2",
