--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-calendars": "^1.1304.1",
     "react-native-circle-slider": "^2.9.0",
     "react-native-circular-slider": "^1.0.1",
     "react-native-dropdown-picker": "^5.4.6",
