--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
     "expo-font": "^11.10.3",
     "expo-font-loader": "^1.1.0",
