--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-calendars": "^1.1304.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circle-slider": "^2.9.0",
     "react-native-circular-slider": "^1.0.1",
     "react-native-dropdown-picker": "^5.4.6",
@@ -36,7 +37,7 @@
     "react-native-radial-slider": "^1.1.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "^15.2.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.8"
   },
