--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-circle-slider": "^2.9.0",
     "react-native-circular-slider": "^1.0.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-elements": "^3.4.3",
