--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.2.0",
+    "react-native-switch-selector": "^2.3.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.8"
   },
