--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-elements": "^3.4.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.10.0",
     "react-native-radial-slider": "^1.1.0",
     "react-native-safe-area-context": "4.8.2",
