--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-font": "^11.10.3",
     "expo-font-loader": "^1.1.0",
     "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "^13.0.2",
     "expo-location": "~16.5.5",
     "expo-notifications": "~0.27.7",
     "expo-status-bar": "~1.11.1",
